@@ -2,6 +2,8 @@
 v3.2.0-git
 ----------
 
+[jan] Pass current vacation addresses to hook
+      (skhorde@smail.inf.fh-bonn-rhein-sieg.de, Request #13185).
 
 
 ------------
